--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Marcus Chua</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -347,9 +347,9 @@
             </button>
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://public.tableau.com/app/profile/marcus/viz/DataAnalyticsProjectTrackerDashboard/Prototype1'"
+              onclick="location.href='https://docs.google.com/document/d/1Np7vR06SRoOMdl9OcoQy7-QFzhaTmj4xzpYF1nV8Qc0/edit?usp=sharing'"
             >
-              Case Study
+              PRD (WIP)
             </button>
           </div>
         </div>
@@ -362,18 +362,18 @@
             />
           </div>
           <h2 class="experience-sub-title project-title">
-            Responsive Portfolio Website
+            Responsive Portfolio Website in HTML, CSS, JavaScript
           </h2>
           <div class="btn-container">
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://public.tableau.com/app/profile/marcus/viz/DataAnalyticsProjectTrackerDashboard/Prototype1'"
+              onclick="location.href='https://github.com/marcus-chua/marcus-chua.github.io'"
             >
-              (Coming Soon)
+              Github
             </button>
             <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://public.tableau.com/app/profile/marcus/viz/DataAnalyticsProjectTrackerDashboard/Prototype1'"
+              onclick="location.href='FIX'"
             >
               (Coming Soon)
             </button>
